# classroom-behavior-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  behavior_analyzer.py  face_recognizer.py  main.py  pyproject.toml  video_recognizer.py
docs/: CLIP_USAGE.md  DEV_ENVIRONMENT.md
scripts/: check_ffmpeg_gpu.py  compare_models.sh  lint.sh  test_clip_model.py
src/: __init__.py  config.py
src/behavior/: __init__.py  action_model.py  action_model_clip.py  behavior_mapping.py  person_detector.py  pipeline.py  report.py  stats.py  video_clip.py
src/face/: __init__.py  gallery.py  matcher.py  recognizer.py
src/utils/: draw.py  log.py  math.py  serializer.py
src/video/: __init__.py  ffmpeg_pipe.py  ffmpeg_reader.py  head_pose.py  recognizer.py  tracker.py
tests/: test_behavior_stats_video_action.py  test_video_frame_face_recognition.py  test_video_tracklet_multiframe_recognition.py
utils/: draw.py  serializer.py
