[project]
name = "classroom-behavior-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "insightface>=0.7.3",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.23.2",
    "onnxscript>=0.5.6",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.1",
    "ultralytics>=8.3.235",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 119

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
